# vynta

./: .editorconfig  .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  README.md  commitlint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: release-please-config.json
.github/workflows/: autofix.yml  ci.yml  pr-title.yml  release-please.yml  release.yml
.husky/: commit-msg  pre-commit
config/: zoom.json
docs/: design_doc.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css
docs/pages/: index.md
docs/pages/architecture/: backend.md  frontend.md  overview.md
docs/pages/features/: live-draw.md  (+4 more)
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer_assets/: LICENSE.txt
src-tauri/src/: commands.rs  cursor.rs  dxgi_capture.rs  lib.rs  magnifier.rs  main.rs  monitor.rs  types.rs  window.rs  zoom.rs
src/composables/: shortcutValidation.ts  useAutostart.ts  useCanvasDrawing.ts  useCursorHighlightWindow.ts  useGlobalShortcuts.ts  useLocalShortcuts.ts  useMainWindow.ts  useMonitorContext.ts  useOverlayWindow.ts  useSpotlightWindow.ts  useToolState.ts  useWhiteboardWindow.ts  useZoomWindow.ts
src/constants/: shortcut-types.ts  shortcuts-global.ts  shortcuts-local.ts  shortcuts.ts
src/locales/: en.json  es.json
src/stores/: overlay.ts  settings.ts  toast.ts  tools.ts
src/types/: drawing.ts  modes.ts  overlay.ts  settings.ts  tools.ts  ui.ts
(+26 files in other folders)
