[package]
name = "vynta-app"
version = "1.1.2"
description = "Productivity application for drawing on screen and desktop utilities."
authors = ["David Deras <david@deras.dev>"]
edition = "2021"
repository = "https://github.com/daiv05/vynta"
license = "MIT"

[lib]
name = "vynta_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_UI_Magnification",
] }
raw-window-handle = "0.6"
tokio = { version = "1", features = ["time"] }
base64 = "0.22"
arc-swap = "1.7"
png = "0.17"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
